<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <SearchView
        android:id="@+id/searchview"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:iconifiedByDefault="true"
        android:inputType="textCapWords"
        android:gravity="center"
        android:layout_gravity="center"
        android:imeOptions="actionSearch"
        android:queryHint="@string/search_hint"

        android:background="@android:drawable/edit_text">

    </SearchView>

    <LinearLayout
        android:id="@+id/lo_friendlist_question"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/avater_layout"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/img_investment"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@mipmap/chat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#000"
            android:text="@string/tips"/>


    </LinearLayout>

    <View
        android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="1.5px"
        android:background="#eee"/>

    <LinearLayout
        android:id="@+id/lo_friendlist_groupchat"
        android:paddingLeft="10dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/avater_layout"
        android:layout_height="40dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@mipmap/chat"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#000"
            android:text="@string/groupchat"/>


    </LinearLayout>



       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="5dp"
           android:layout_marginBottom="5dp"
           android:padding="5dp"
           android:textSize="14sp"
           android:gravity="center_vertical"
           android:background="#fff"
           android:text="@string/friend_list"/>


    <ListView
        android:id="@+id/lv_friendlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">

    </ListView>

</LinearLayout>