<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.missu.Activitys.SettingActivity">

    <LinearLayout
        android:id="@+id/language_setting"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:clickable="true"
        android:background="@drawable/about_button_selector">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content"
            android:text="@string/langugae"
            android:layout_marginLeft="30dp"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_gravity="center_vertical"/>



    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#000"/>

    <LinearLayout
        android:id="@+id/infrom_setting"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:clickable="true"
       >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content"
            android:text="@string/new_message_inform"
            android:layout_marginLeft="30dp"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_gravity="center_vertical"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/new_message_inform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:splitTrack="true" />
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#000"/>

    <LinearLayout
        android:id="@+id/infrom_sound_setting"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:clickable="true">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content"
            android:text="@string/new_message_sound"
            android:layout_marginLeft="30dp"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_gravity="center_vertical"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/new_message_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#000"/>

    <LinearLayout
        android:id="@+id/infrom_vibrate_setting"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_weight="9"
            android:text="@string/new_message_vibrate"
            android:textColor="#000"
            android:textSize="18sp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/new_message_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#000"/>




    <LinearLayout
        android:id="@+id/infrom_nihgt_setting"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:clickable="true">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content"
            android:text="@string/night_shift"
            android:layout_marginLeft="30dp"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_gravity="center_vertical"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/new_message_night_inform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="#000"/>

    <Button
        android:id="@+id/btn_setting_signout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login_out"
        android:background="@drawable/delete_friend_btn"/>

</LinearLayout>
