<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#f0fcf2">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/logo"/>

    <TextView
        android:id="@+id/appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@id/logo"
        android:layout_marginTop="10dp"
        android:textColor="#000"
        android:textSize="20sp"
        android:text="@string/appname"/>




    <LinearLayout
        android:id="@+id/contect_auther"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="vertical"
        android:background="@drawable/about_button_selector"
        android:layout_below="@+id/appname"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_rool"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:background="#b9b9b9"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/about_rool"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/contect_auther"
        android:orientation="vertical"
        android:clickable="true"
        android:background="@drawable/about_button_selector">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contect_auother"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:background="#b9b9b9"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/goto_check"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/about_rool"
        android:orientation="vertical"
        android:clickable="true"
        android:background="@drawable/about_button_selector">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_number"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f0f0f0"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical"
        android:layout_alignParentStart="true">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:text="For  Android  V1.0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:text="@string/welcome"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:layout_marginBottom="0dp"
            android:text="©2017 NJUST CSI All Rights Reserved"/>

    </LinearLayout>


</RelativeLayout>
